--- a/PIM/static/ngTemplates/app.home.profile.modal.html
+++ b/PIM/static/ngTemplates/app.home.profile.modal.html
@@ -11,10 +11,20 @@
       <div class="row text-center">
         <div class="col-md-6 col-lg-6">
           <table class="invoiceTable" style=" width: 100%;border-collapse: collapse;">
-            <tr ng-repeat="month in monthsData">
-              <td><span style="margin-left:4.5em;">{{ month }}</span><span class="pull-right"><i class="fa fa-eye" style="font-size:1.5em;margin:0 0.5em;cursor:pointer;color:#337ab7;" ng-model="attendance" ng-click="view(month)"></i><a style="cursor:pointer;" target="_blank"
-                href="/api/payroll/getPayMonthlyslip/?userid={{data.user}}&year={{currentYear}}&month={{month}}"><i class="fa fa-download" style="font-size:1.5em;margin:0 0.5em;cursor:pointer;" ></i></a></span>
-              </td>
+            <tr ng-repeat="n in monthsData">
+              <td>
+                <!-- <span style="margin-left:4.5em;">{{ month }}</span>
+                <span class="pull-right"><i class="fa fa-eye" style="font-size:1.5em;margin:0 0.5em;cursor:pointer;color:#337ab7;" ng-model="attendance" ng-click="view(month)"></i></span> -->
+                <!-- <a style="cursor:pointer;" target="_blank"
+                href="/api/payroll/getPayMonthlyslip/?userid={{data.user}}&year={{currentYear}}&month={{month}}"><i class="fa fa-download" style="font-size:1.5em;margin:0 0.5em;cursor:pointer;" ></i></a></span> -->
+                <div class=" col-md-offset-1 col-md-7"><span >{{n}}</span></div>
+                <div class="col-md-offset-1 col-md-1">
+                <span class="pull-right"><i class="fa fa-eye" style="font-size:1.5em;cursor:pointer;color:#337ab7;" ng-model="attendance" ng-click="view(n)"></i></span></div>
+                <div class="col-md-1">
+                <span ng-if="monthsForWhichPayslipsExist.indexOf(n) != -1"><a style="cursor:pointer;" target="_blank"
+                href="/api/payroll/getPayMonthlyslip/?userid={{data.user}}&year={{currentYear}}&month={{n}}"><i  class="fa fa-download" style="font-size:1.5em;cursor:pointer; "></i></a>
+              </span></div>
+            </td>
             </tr>
           </table>
         </div>
