--- a/projects/static/ngTemplates/app.projects.issuesform.html
+++ b/projects/static/ngTemplates/app.projects.issuesform.html
@@ -2,20 +2,42 @@
   <h3 class="text-center">Create an Issue</h3>
 </div>
 <div class="modal-body">
-
-
+  
   <div class="form-group">
     <label>Title</label>
     <input type="text" class="form-control" ng-model="form.title">
   </div>
 
   <div class="form-group">
-    <label>Priority</label>
-    <select class="form-control" ng-model="form.priority">
-      <option value="low">Low</option>
+    <label style="margin-top:20px;">Priority</label>
+    <!-- <select class="form-control" ng-model="form.priority"> -->
+      <div class="row">
+        <div class="col-md-3 text-center">
+          <img src="/static/images/images_low.png" style="height:50px;height:50px;" class="img img-circle">
+          <br>
+          Low
+          <br>
+          <input ng-model="form.priority" name="low" type="radio" ng-value="'low'" value="low">
+        </div>
+        <div class="col-md-3 text-center">
+          <img src="/static/images/images_medi.png" style="height:50px;height:50px;" class="img img-circle">
+          <br>
+          Medium
+          <br>
+          <input ng-model="form.priority" name="medium" type="radio" ng-value="'medium'"  value="medium">
+        </div>
+        <div class="col-md-3 text-center">
+          <img src="/static/images/images_high.png" style="height:50px;height:50px;" class="img img-circle">
+          <br>
+          High
+          <br>
+          <input ng-model="form.priority" name="high" type="radio" ng-value="'high'"  value="high">
+        </div>
+      </div>
+      <!-- <option value="low">Low</option>
       <option value="medium">Medium</option>
-      <option value="high">High</option>
-    </select>
+      <option value="high">High</option> -->
+    <!-- </select> -->
   </div>
 
   <div class="form-group">
