--- a/finance/static/ngTemplates/app.finance.vendor.explore.html
+++ b/finance/static/ngTemplates/app.finance.vendor.explore.html
@@ -30,55 +30,40 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
-    <div class="col-md-9">
-      <div class="container-fluid" style="margin-top:30px" >
-        <table class="invoiceTable" style=" width: 100%;border-collapse: collapse;">
-          <tr style="background-color: #eeeeee;height: 96px;">
-            <th>S.No</th>
-            <th>Particular</th>
-            <th>Rate</th>
-            <th></th>
-          </tr>
-          <tbody>
-            <tr ng-repeat="v in vendorServiceData">
-              <td>{{$index + 1}}</td>
-              <td>{{v.particular}}</td>
-              <td>{{v.rate}}</td>
-              <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData()"> <i class="fa fa-trash"></i> </button></td>
-            </tr>
-          </tbody>
-          <tr ng-repeat="item in items">
+  <div class="col-md-9">
+    <table class="invoiceTable" style=" width: 100%;">
+      <tbody>
+        <tr style="background-color: #eeeeee;height: 96px;">
+          <th>S.No</th>
+          <th>Particular</th>
+          <th>Rate</th>
+          <th></th>
+          <tr ng-repeat="v in vendorServiceData">
             <td>{{$index + 1}}</td>
+            <td>{{v.particular}}</td>
+            <td>{{v.rate}}</td>
+            <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td>
+          </tr>
+          <tr ng-repeat="item in items">
+            <td>{{$index + 1 + vendorServiceData.length}}</td>
+            <td><input  ng-model="item.particular" type="text" class="form-control-pos"></td>
             <td>
-              <input  ng-model="item.particular" type="text" class="form-control-pos">
-              <td>
-                <input type="number" step=".01" class="form-control-pos" ng-model="item.rate">
-              </td>
-              <td>
-                <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable($index)"> <i class="fa fa-trash"></i> </button>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="container-fluid" style="padding:0px;">
-                  <button style="background-color:white;border:none;" ng-click="addTableRow()"><i class="fa fa-plus" aria-hidden="true"  style="cursor:pointer"></i>
-                  </button>
-                </div>
-              </td>
-              <td style="border:none;"></td>
-              <!-- <td>{{totalRate()}}</td> -->
-              <td style="border:none;"></td>
-              <td style="border:none;"></td>
-            </tr>
-          </table>
-</div>
-        <div class="row">
-              <div class="col-md-12">
-                <button type="button" class="btn btn-success pull-right" ng-click="save()" style="margin-right:55px;">Save</button>
-              </div>
-        </div>
-      </div>
+              <input type="number" step=".01" class="form-control-pos" ng-model="item.rate">
+            </td>
+            <td>
+              <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable($index)"> <i class="fa fa-trash"></i> </button>
+            </td>
+          </tr>
+          <tr>
+            <td><button style="background-color:white;border:none;" ng-click="addTableRow()"><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
+          </tr>
+        </tr>
+      </tbody>
+    </table>
+    <div class="row">
+      <div class="col-md-12">
+        <button type="button" class="btn btn-success pull-right" ng-click="save()" style="margin-right:55px;">Save</button>
       </div>
     </div>
   </div>
+</div>
