--- a/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
@@ -202,9 +202,9 @@
           <div class="row">
             <div class="container-fluid">
               <h3></h3>
-              <span>Earning so far:</span><br>
-              <span>Annual leaves:</span><br>
-              <span>Medical Leaves:</span>
+              <span>Earning so far:{{totalamount}}</span><br>
+              <span>Annual leaves:</span>{{annualLeave}}<br>
+              <span>Medical Leaves:</span>{{medicalLeave}}
             </div>
           </div>
 
