--- a/PIM/static/ngTemplates/app.home.profile.modal.html
+++ b/PIM/static/ngTemplates/app.home.profile.modal.html
@@ -17,8 +17,8 @@
                 <span class="pull-right"><i class="fa fa-eye" style="font-size:1.5em;margin:0 0.5em;cursor:pointer;color:#337ab7;" ng-model="attendance" ng-click="view(month)"></i></span> -->
                 <!-- <a style="cursor:pointer;" target="_blank"
                 href="/api/payroll/getPayMonthlyslip/?userid={{data.user}}&year={{currentYear}}&month={{month}}"><i class="fa fa-download" style="font-size:1.5em;margin:0 0.5em;cursor:pointer;" ></i></a></span> -->
-                <div class=" col-md-offset-1 col-md-7"><span >{{n}}</span></div>
-                <div class="col-md-offset-1 col-md-1">
+                <div class=" col-md-offset-3 col-md-6" ><span style="margin-left:-1em;" >{{n}}</span></div>
+                <div class=" col-md-1">
                 <span class="pull-right"><i class="fa fa-eye" style="font-size:1.5em;cursor:pointer;color:#337ab7;" ng-model="attendance" ng-click="view(n)"></i></span></div>
                 <div class="col-md-1">
                 <span ng-if="monthsForWhichPayslipsExist.indexOf(n) != -1"><a style="cursor:pointer;" target="_blank"
@@ -41,7 +41,7 @@
             <div class="col-md-6 text-right">
               <strong>Present Days:</strong>
             </div>
-            <div class="col-md-3 text-left">{{12}}
+            <div class="col-md-3 text-left">{{presentDays}}
             </div>
           </div>
           <div class="row" >
