--- a/employees/static/ngTemplates/app.employees.Attendance.html
+++ b/employees/static/ngTemplates/app.employees.Attendance.html
@@ -7,12 +7,12 @@
     <div class="row" style="margin-left:20px;margin-right:20px;">
       <div class="container-fluid">
         <div class="row">
-          <div class="btn-group col-md-3 col-sm-12 col-xs-12">
+          <div class=" col-md-3 col-sm-12 col-xs-12">
             <button class="btn btn-success col-sm-4 col-xs-6" ng-click="gotoPrev()">
               Previous
             </button>
+            <button class="btn btn-default pull-right" type="button" ng-click="openUploadForm()">Upload</button>
           </div>
-
           <div class="Calenderheader col-md-3 col-sm-8 col-xs-12">
             <div class="input-group">
               <input class="form-control" type="text" ng-model="userform.user" uib-typeahead="user as user.username for user in userSearch($viewValue)" />
