--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -64,6 +64,7 @@
       <li><a ui-sref="account.orders" style="color:var(--themeColor)">Orders</a></li>
       <li><a ui-sref="account" style="color:var(--themeColor)">Account</a></li>
       <li><a href="" ng-click="logoutPage()" style="color:var(--themeColor)">Logout</a></li>
+      <li><a href="" ng-click="goToAdmin()" ng-if="MODE == 'admin'" style="color:var(--themeColor)">Admin</a></li>
     </ul>
   </div>
 
