--- a/POS/static/ngTemplates/app.POS.invoice.item.html
+++ b/POS/static/ngTemplates/app.POS.invoice.item.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-8" style="margin-top:10px;">
         <div class="row col-md-11">
-          <h3>{{data.customer.name}}</h3>
+          <span>{{data.customer.name}}</span>
         </div>
         <div class="row" style="font-size: 12px;">
           <div class="col-md-12">
