--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -30,8 +30,8 @@
         <button type="button" class="btn btn-default" ng-click="prev()" ng-disabled="offset==0?true:false" style="width:100px"> <i class="fa fa-arrow-left"> </i> Prev </button>
         <button type="button" class="btn btn-default" ng-click="next()" style="width:100px"> Next <i class="fa fa-arrow-right"></i>  </button>
       </div> -->
-      <div class="col-md-4">
-        <div class="btn-group pull-right">
+      <div class="col-md-4" style="padding:0px;">
+        <div class="btn-group">
           <button type="button" class="btn btn-default" ng-click="topButtonsClick('New')"><i class="fa fa-plus"></i> New </button>
           <button type="button" class="btn btn-default" ng-click="topButtonsClick('Reorder')"><i class="fa fa-shopping-cart"></i> Reorder</button>
           <button type="button" class="btn btn-default" ng-click="topButtonsClick('stockReport')"><i class="fa fa-file"></i> Stock Report</button>
@@ -42,30 +42,33 @@
   </div>
 
   <div class="container-fluid" style="margin-top:15px;" ng-repeat="pi in prodInventories">
-    <div class="card">
+    <div class="card" style="padding:0px;">
       <div class="row container-fluid" ng-click="toggle(pi.productPk,$index)">
-        <div class="col-md-1 text-center">
+        <div class="col-md-1 text-center" style="padding-left:0px;border-left:3px solid rgb(247, 98, 43)">
           <!-- <h4>{{$index+1}}</h4> -->
           <img ng-src="{{'/media/' +pi.productdp}}" style="width:100%" />
         </div>
-        <div class="col-md-10 text-left">
-          <h3><strong>{{pi.productName}}</strong></h3>
-          <div class="col-md-3">
-            <!-- <span style="font-size:18px"><strong>Serial Id : </strong>{{pi.productSerialId}} </span> -->
+        <div class="col-md-11 text-left">
+
+          <div class="col-md-6">
+            <h4><strong>{{pi.productName}}</strong></h4>
           </div>
-          <div class="col-md-2">
-            <span style="font-size:18px"><strong> Unit : </strong>{{pi.productUnit}} </span>
+          <div class="col-md-6" style="padding-top:20px;">
+            <div class="col-md-3">
+              <span style="font-size:14px"><strong> Unit : </strong>{{pi.productUnit}} </span>
+            </div>
+            <div class="col-md-3">
+              <span style="font-size:14px"><strong> Price : </strong>{{pi.productPrice}} </span>
+            </div>
+            <div class="col-md-4">
+              <span style="font-size:14px"><strong> Discount : </strong>{{pi.productDiscount}}% </span>
+            </div>
+            <div class="col-md-2 text-right">
+              <i class="fa fa-pencil fa-2x" style="cursor:pointer; color:#2583ce;" ng-click="$event.stopPropagation(); openProductForm(pi.productPk)"></i> &nbsp;&nbsp;
+              <i class="fa fa-info fa-2x" style="cursor:pointer; color:#2583ce;" ng-click="$event.stopPropagation(); openProductInfo(pi.productPk)"></i>
+            </div>
           </div>
-          <div class="col-md-2">
-            <span style="font-size:18px"><strong> Price : </strong>{{pi.productPrice}} </span>
-          </div>
-          <div class="col-md-2">
-            <span style="font-size:18px"><strong> Discount : </strong>{{pi.productDiscount}}% </span>
-          </div>
-          <div class="col-md-2 text-right">
-            <i class="fa fa-pencil fa-2x" style="cursor:pointer; color:#2583ce;" ng-click="$event.stopPropagation(); openProductForm(pi.productPk)"></i> &nbsp;&nbsp;
-            <i class="fa fa-info fa-2x" style="cursor:pointer; color:#2583ce;" ng-click="$event.stopPropagation(); openProductInfo(pi.productPk)"></i>
-          </div>
+
         </div>
       </div>
       <div class="row container-fluid" ng-if="pi.open">
