--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -62,14 +62,15 @@
       <div class="row" style="padding:0px;" ng-repeat="message in data.messages track by $index">
 
         <div class="row container-fluid">
-          <div style="float:{{message.sentByAgent ? 'right; background-color:#E4E5E9; ':'left; background-color:#DDF7C8;'}} padding:10px;margin:8px;border-radius:{{message.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
+          <div ng-if="!message.logs" style="float:{{message.sentByAgent ? 'right; background-color:#E4E5E9; ':'left; background-color:#DDF7C8;'}} padding:10px;margin:8px;border-radius:{{message.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
             <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-wrap: break-word; !important; white-space: pre-wrap;   "> <span ng-if="message.message.includes('www.') || message.message.includes('http')"> <a href="{{message.message}}">{{message.message}}</a> </span> <span ng-if="!message.message.includes('www.') && !message.message.includes('http')">{{message.message }}</span>  </p>
             <img ng-if="message.attachmentType == 'image' ||message.attachmentType == 'instructionImage'" ng-src="{{message.attachment}}" style="width:250px;">
             <video ng-if="message.attachmentType == 'video'" width="280" height="240" ng-src="{{message.attachment}}" controls></video>
             <audio ng-if="message.attachmentType == 'audio'" ng-src="{{message.attachment}}" controls></audio>
+            <p ng-if="message.logs.length>0">{{message.logs}} at {{message.created | getTime}}</p>
             <p class="text-center" ng-if="message.attachmentType == 'application'" style="word-wrap: break-word;"><a ng-href="{{message.attachment}}" target="_blank"><i class="fa {{message.attachment.split('chat/')[1] | fileTypeIcon }} fa-2x" ></i></a> <br> {{message.attachment.split('chat/')[1]}} </p>
             <div ng-if="message.attachmentType == 'youtubeLink'">
-              <iframe width="100%" height="215" ng-src="{{message.message | trusted}}" frameborder="0" allowfullscreen></iframe>
+              <iframe width="100%" height="215" ng-src="{{message.message | trusted}}" frameborder="0" allowfullscreen allow="geolocation; microphone; camera" ></iframe>
             </div>
             <div ng-if="message.userEndedChat">
               <div class="row">
@@ -94,9 +95,12 @@
               </div> -->
             </div>
           </div>
+          <div ng-if="message.logs" style="text-align:center;">
+            <p ng-if="message.logs.length>0">{{message.logs}} at {{message.created | getTime}}</p>
+          </div>
         </div>
 
-        <div class="row container-fluid" style="{{message.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
+        <div ng-if="!message.logs" class="row container-fluid" style="{{message.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
           <span ng-if="!message.sentByAgent" style="float:left;  font-size:11px; " class="text-muted">{{message.created | getTime}}</span>
           <span ng-if="message.sentByAgent" style="float:right;  font-size:11px; " class="text-muted">{{message.user | getName}}, {{message.created | getTime}}</span>
         </div>
