--- a/support/static/ngTemplates/app.qualityCheck.explore.html
+++ b/support/static/ngTemplates/app.qualityCheck.explore.html
@@ -39,7 +39,7 @@
           <video id="vid_visitor" class="col-md-4"height="240">
               <source ng-src="{{video_chat.agent}}" type="video/webm">
           </video>
-          <video id="" class="col-md-4"height="240" controls>
+          <video id="" class="col-md-4" height="240" controls>
               <source ng-src="{{screen_video}}" type="video/webm">
           </video>
         </div>
@@ -86,7 +86,7 @@
       <div class="row col-sm-12" ng-repeat="msg in msgData">
 
         <!-- <h3>{{msg.message}}</h3> -->
-        <div class="container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
+        <div ng-if="!msg.logs" class="container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
           <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;">
             <h4>{{msg.message}}</h4></p>
           <img ng-if="msg.attachmentType == 'image' || msg.attachmentType == 'instructionImage'" ng-src="{{msg.file}}" style="width:250px;">
@@ -97,7 +97,10 @@
             <iframe width="100%" height="215" ng-src="{{msg.message | trusted}}" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
+        <div ng-if="msg.logs" style="text-align:center;">
+          <p ng-if="msg.logs.length>0">{{msg.logs}} at {{msg.created | getTime}}</p>
+        </div>
+        <div ng-if="!msg.logs" class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
           <span ng-if="msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" ng-init="cal = calculateTime(msgData[$index-1].created , msg.created)">{{msg.created | date : 'hh:mm:a' }} , {{cal}}</span>
           <span ng-if="!msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted">{{msg.created | date : 'hh:mm:a' }}</span>
         </div>
