--- a/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
@@ -223,7 +223,9 @@
               <tr ng-repeat ="n in monthsData">
                 <td>
                   <div class=" col-md-offset-3 col-md-6"><span >{{n}}</span></div>
-                  <div class="col-md-2">
+                  <div class=" col-md-1">
+                  <span class="pull-right"><i class="fa fa-eye" style="font-size:1.5em;cursor:pointer;color:#337ab7;" ng-model="attendance" ng-click="view(n)"></i></span></div>
+                  <div class="col-md-1">
                   <span ng-if="monthsForWhichPayslipsExist.indexOf(n) != -1"><a style="cursor:pointer;" target="_blank"
                   href="/api/payroll/getPayMonthlyslip/?userid={{data.user}}&year={{currentYear}}&month={{n}}"><i  class="fa fa-download" style="font-size:1.5em;margin:0 0.5em;cursor:pointer; "></i></a>
                 </span></div>
