--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -8,12 +8,12 @@
 
 
   <div class="col-xs-2 text-center hidden-xs hidden-sm" ng-if="!SortByCategory" style="padding-top:2px;">
-    <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="">
+    <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="" ng-if="topIcon">
   </div>
 
   <div class="col-xs-{{SortByCategory?'3':'2'}} text-center hidden-xs hidden-sm" ng-if="SortByCategory" >
-    <div class="col-xs-6 " style="padding-top:3px;">
-      <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="">
+    <div class="col-xs-6 " style="padding-top:3px;" ng-if="topIcon">
+      <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="" >
     </div>
 
 
@@ -44,7 +44,7 @@
 
   </div>
 
-  <div class="col-xs-2 hidden-md hidden-lg" style="padding:7px;">
+  <div class="col-xs-2 hidden-md hidden-lg" style="padding:7px;" ng-if="topIcon">
     <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="">
   </div>
 
