--- a/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
@@ -212,6 +212,37 @@
         <div class="col-md-6">
           <div class="container-fluid">
             <div class="row text-center" style="margin-bottom:10px">
+              <div class="text-center" ng-if="attendance">
+                <h3 class="text-center">Attendance Details</h3>
+              <div class="row" >
+                <div class="col-md-7 text-right">
+                  <strong>Total Days:</strong>
+                </div>
+                <div class="col-md-3 text-left">{{days}}
+                </div>
+              </div>
+              <div class="row" >
+                <div class="col-md-7 text-right">
+                  <strong>Present Days:</strong>
+                </div>
+                <div class="col-md-3 text-left">{{presentDays}}
+                </div>
+              </div>
+              <div class="row" >
+                <div class="col-md-7 text-right">
+                  <strong>Absent Days:</strong>
+                </div>
+                <div class="col-md-3 text-left">{{days - (presentDays+leaveDays)}}
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-7 text-right">
+                  <strong>Leave Days:</strong>
+                </div>
+                <div class="col-md-3 text-left">{{leaveDays}}
+                </div>
+              </div>
+            </div>
               <ul class="pager">
                 <li class="previous {{currentYear==joiningDateYear? 'disabled':''}}"><a href="" ng-click="prev()"><span aria-hidden="true">&larr;</span> Prev</a></li>
                 <li class="next {{currentYear==lastWorkingYear? 'disabled':''}}"><a href="" ng-click="next()">Next <span aria-hidden="true">&rarr;</span></a></li>
