--- a/PIM/static/ngTemplates/app.home.profile.modal.html
+++ b/PIM/static/ngTemplates/app.home.profile.modal.html
@@ -30,30 +30,30 @@
         </div>
         <div class="col-md-6 col-lg-6">
           <div class="text-center" ng-if="attendance">
-            <h3 class="text-center">Attendance Details</h3>
+            <h3 class="text-center">{{currentYear + '-' + currentMonth }}</h3>
           <div class="row" >
-            <div class="col-md-6 text-right">
+            <div class="col-md-7 text-right">
               <strong>Total Days:</strong>
             </div>
             <div class="col-md-3 text-left">{{days}}
             </div>
           </div>
           <div class="row" >
-            <div class="col-md-6 text-right">
+            <div class="col-md-7 text-right">
               <strong>Present Days:</strong>
             </div>
             <div class="col-md-3 text-left">{{presentDays}}
             </div>
           </div>
           <div class="row" >
-            <div class="col-md-6 text-right">
+            <div class="col-md-7 text-right">
               <strong>Absent Days:</strong>
             </div>
             <div class="col-md-3 text-left">{{days - (presentDays+leaveDays)}}
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 text-right">
+            <div class="col-md-7 text-right">
               <strong>Leave Days:</strong>
             </div>
             <div class="col-md-3 text-left">{{leaveDays}}
