--- a/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
@@ -213,7 +213,7 @@
           <div class="container-fluid">
             <div class="row text-center" style="margin-bottom:10px">
               <div class="text-center" ng-if="attendance">
-                <h3 class="text-center">Attendance Details</h3>
+                <h3 class="text-center"> {{currentYear + '-' + currentMonth }}</h3>
               <div class="row" >
                 <div class="col-md-7 text-right">
                   <strong>Total Days:</strong>
