--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -122,7 +122,7 @@
                   <div class="col-md-1">
                     <p> X </p>
                   </div>
-                  <div class="col-md-1">
+                  <div class="col-md-1" >
                     <input type="number" ng-change="changeQty()" ng-model="item.qty" name="" value="" style="width: 60px;" min="1">
                   </div>
                   <div class="col-md-1">
@@ -130,7 +130,6 @@
                   </div>
                 </div>
               </div>
-
               <div ng-if="cartItems" ng-repeat="c in cartItems">
                 <div class="row" style="padding-top:30px;">
                   <div class="col-md-3" style="overflow:hidden;">
@@ -163,13 +162,13 @@
                     </div>
                   </div>
 
-                  <div class="col-md-1" style="padding-top: 50px;">
+                  <div class="col-md-1" style="padding-top: 50px;" >
                     <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 60px;" min="1">
                   </div>
-                  <!-- <div class="col-md-1" style="padding-top: 50px;" ng-if="c.product.in_stock=='false'">
+                  <div class="col-md-1" style="padding-top: 50px;" ng-if="c.stock==0">
                     <span style="color:#ef4a1e">Out Of Stock</span>
                     <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
-                  </div> -->
+                  </div>
                   <div class="col-md-2" style="padding-top: 50px;padding-left:50px;">
                     <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{(c.product.product.discountedPrice * c.qty).toFixed(2) }} </p>
                     <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{(c.prodVarPrice * c.qty).toFixed(2) }} </p>
@@ -203,7 +202,7 @@
                   <div class="col-xs-2">
                     <span>Qty :</span>
                   </div>
-                  <div class="col-xs-3">
+                  <div class="col-xs-3" >
                     <input type="number" ng-change="changeQty()" ng-model="item.qty" name="" value="" style="width: 40px;" min="1" >
                   </div>
 
@@ -247,13 +246,13 @@
                     <div class="col-xs-2">
                       <span>Qty :</span>
                     </div>
-                    <div class="col-xs-3" >
+                    <div class="col-xs-3" ng-if="c.stock>0">
                       <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 40px;" min="1">
                     </div>
-                    <!-- <div class="col-xs-5"  ng-if="c.product.in_stock=='false'">
+                    <div class="col-xs-5"  ng-if="c.stock<=0">
                       <span style="color:#ef4a1e">Out Of Stock</span>
                       <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
-                    </div> -->
+                    </div>
                     <div class="col-xs-3">
                       <span>Total :</span>
                     </div>
