--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -246,7 +246,7 @@
                     <div class="col-xs-2">
                       <span>Qty :</span>
                     </div>
-                    <div class="col-xs-3" ng-if="c.stock>0">
+                    <div class="col-xs-3" >
                       <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 40px;" min="1">
                     </div>
                     <div class="col-xs-5"  ng-if="c.stock<=0">
