--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -123,7 +123,7 @@
                     <p> X </p>
                   </div>
                   <div class="col-md-1" >
-                    <input type="number" ng-change="changeQty()" ng-model="item.qty" name="" value="" style="width: 60px;" min="1">
+                    <input type="number" ng-change="changeQty()" ng-model="item.qty" name="" value="" style="width: 60px;" min="1" >
                   </div>
                   <div class="col-md-1">
                     <p> <i class="fa {{currency}}"></i> {{(item.product.discountedPrice * item.qty).toFixed(2) }} </p>
@@ -162,10 +162,10 @@
                     </div>
                   </div>
 
-                  <div class="col-md-1" style="padding-top: 50px;" >
-                    <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 60px;" min="1">
+                  <div class="col-md-1" style="padding-top: 50px;" ng-if="c.stock>0">
+                    <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 60px;" min="1" >
                   </div>
-                  <div class="col-md-1" style="padding-top: 50px;" ng-if="c.stock==0">
+                  <div class="col-md-1" style="padding-top: 50px;" ng-if="c.stock<=0||!c.stock">
                     <span style="color:#ef4a1e">Out Of Stock</span>
                     <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
                   </div>
@@ -243,13 +243,13 @@
                   </div>
 
                   <div class="row" style="padding-top:20px;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-2" ng-if="c.stock>0">
                       <span>Qty :</span>
                     </div>
-                    <div class="col-xs-3" >
-                      <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 40px;" min="1">
+                    <div class="col-xs-3" ng-if="c.stock>0">
+                      <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 40px;" min="1" >
                     </div>
-                    <div class="col-xs-5"  ng-if="c.stock<=0">
+                    <div class="col-xs-5" ng-if="c.stock<=0||!c.stock">
                       <span style="color:#ef4a1e">Out Of Stock</span>
                       <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
                     </div>
