--- a/finance/static/ngTemplates/app.finance.vendor.item.html
+++ b/finance/static/ngTemplates/app.finance.vendor.item.html
@@ -1,4 +1,4 @@
-<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.finance.vendor.item" >
+<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.finance.vendor.item">
   <div class="container-fluid card" style="padding-bottom:10px; padding-top:10px;">
     <div class="row" style="border-bottom: 1px solid #dedede;">
       <div class="col-md-12" style="position:relative;display:block;">
@@ -10,19 +10,24 @@
     <div class="row container-fluid" style="padding-top:20px;height:70px;">
       <div class="col-md-10" style="z-index: 1;">
         <span style="font-size:15px;"><strong>Contact Person: </strong>{{data.contactPerson}}</span><br>
-        <span><strong><i style="width:30px;" class="fa fa-mobile"></i></strong>{{data.mobile}}</span><br>
-        <span><strong><i style="width:30px;"class="fa fa-envelope"></i></strong>{{data.email}}</span><br>
+        <span><strong><i style="width:30px;" class="fa fa-mobile fa-lg"></i></strong>{{data.mobile}}</span><br>
+        <span><strong><i style="width:30px;" class="fa fa-envelope "></i></strong>{{data.email}}</span><br>
       </div>
-      <div class = "col-md-2">
+      <div class="col-md-2">
         <div style="padding-right:20px;">
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click = "rowActionClicked('edit')">
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('edit')">
               <i class="fa fa-pencil fa-lg" style="margin-top:0px;"></i>
             </span>
           </div>
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click = "rowActionClicked('details')">
-              <i class="fa fa-info-circle fa-lg" style="margin-top:20px;"></i>
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('invoiceDetails')">
+              <span><i class="fa fa-archive fa-lg" style="margin-top:15px;"></i></span>
+            </span>
+          </div>
+          <div class="row">
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('details')">
+              <i class="fa fa-info-circle fa-lg" style="margin-top:15px;"></i>
             </span>
           </div>
         </div>
