--- a/finance/static/ngTemplates/app.finance.vendor.explore.html
+++ b/finance/static/ngTemplates/app.finance.vendor.explore.html
@@ -39,16 +39,16 @@
           <th>Rate</th>
           <th></th>
           <tr ng-repeat="v in vendorServiceData">
-            <td>{{$index + 1}}</td>
-            <td>{{v.particular}}</td>
-            <td>{{v.rate}}</td>
-            <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td>
+            <td width="20%">{{$index + 1}}</td>
+            <td width="40%">{{v.particular}}</td>
+            <td width="30%">{{v.rate}}</td>
+            <td width="20%"><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td>
           </tr>
           <tr ng-repeat="item in items">
             <td>{{$index + 1 + vendorServiceData.length}}</td>
             <td><input  ng-model="item.particular" type="text" class="form-control-pos"></td>
             <td>
-              <input type="number" step=".01" class="form-control-pos" ng-model="item.rate">
+              <input type="number"  step=1 class="form-control-pos" ng-model="item.rate">
             </td>
             <td>
               <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable($index)"> <i class="fa fa-trash"></i> </button>
