--- a/finance/static/ngTemplates/app.finance.vendor.form.html
+++ b/finance/static/ngTemplates/app.finance.vendor.form.html
@@ -5,10 +5,14 @@
   <div class="container-fluid" ng-if="mode=='edit'">
     <h3>Edit {{form.service.name}} Profile</h3>
   </div>
-  <div class="col-md-6" style="padding-top:20px;" >
+  <div class="col-md-6" style="padding-top:20px;">
     <div class="form-group" ng-if="mode=='new'">
       <label>Company</label>
-      <input uib-typeahead="company as company.name for company in companySearch($viewValue)" ng-model="form.service" type="text" class="form-control" placeholder="Search using name">
+      <div class="{{(showCreateCompanyBtn || companyExist) && !showCompanyForm ? 'input-group':''}}">
+        <input uib-typeahead="company as company.name for company in companySearch($viewValue)" ng-model="form.service" type="text" class="form-control" placeholder="Search using name">
+        <span ng-click="openCreateService()" ng-if="(showCreateCompanyBtn || companyExist) && !showCompanyForm" class="input-group-addon btn btn-primary"><i class="fa fa-{{!companyExist ? 'plus':'pencil'}}"></i> {{ !companyExist?  'New':'Update'}}</span>
+      </div>
+      <p ng-if="showCreateCompanyBtn && !companyExist" class="help-block">No company with this name exist!. Click <span class="badge">new</span> to create.</p>
     </div>
     <div class="form-group">
       <label>Contact Person</label>
@@ -27,12 +31,12 @@
       <input ng-model="form.paymentTerm" type="text" class="form-control">
     </div>
     <div class="form-group">
-      <label>Content Doc.</label>
-      <input type="file" file-model="form.contentDocs" >
+      <label>Contract Doc.</label>
+      <input type="file" file-model="form.contentDocs">
     </div>
     <div class="btn-group pull-right">
       <button ng-if="mode=='new'" type="button" class="btn btn-default" ng-click="resetForm()">
-      Reset
+        Reset
       </button>
       <button type="button" class="btn btn-primary pull-right" ng-click="createVendor()">Save</button>
     </div>
